--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "1.9.0",
-    "@tailwindcss/typography": "0.4.0"
+    "@tailwindcss/typography": "0.4.0",
     "autoprefixer": "10.0.2",
     "netlify-cms-app": "2.12.25",
     "next": "10.0.0",
