--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "nextwind",
   "version": "1.0.0",
   "scripts": {
-    "build": "next build",
+    "build": "next build && next export",
     "dev": "next dev",
-    "export": "next export",
-    "lint": "eslint --ext .ts,.tsx",
+    ""lint": "eslint --ext .ts,.tsx",
     "lint:fix": "eslint --ext .ts,.tsx --fix",
     "start": "next start"
   },
@@ -44,23 +43,4 @@
     "pretty-quick": "3.0.2",
     "typescript": "4.0.3"
   }
-},
-{
-  "name": "clickvertise",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
-  },
-  "engines": {
-    "node": "20.x"
-  }
 }
-
